--- a/produit.html
+++ b/produit.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pains</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Produits</title>
     <link rel="stylesheet" href="produit.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -195,7 +195,7 @@
         </div>
     </div>
 
-    <div id="product-modal" class="modal">
+    <div id="product-modal" class="product-modal">
         <div class="modal-content">
             <h2>Informations produit</h2>
             <div class="modal-links">
