Suite de la saisie dejeuner

--- a/produit.html
+++ b/produit.html
@@ -6,6 +6,7 @@
     <title>Produits</title>
     <link rel="stylesheet" href="produit.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/icon-red-Boulangerie.svg" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -187,7 +188,6 @@
         <div class="product-details">
             <h1 id="product-name"></h1>
             <div class="product-info-container">
-                <img src="assets/icons/VEGETARIEN_ENGB.webp" alt="Végétarien" class="product-info-icon">
                 <h2 id="product-info"></h2>
             </div>
             <p id="product-description"></p>
