--- a/cocktails.html
+++ b/cocktails.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cocktails et Appéritifs</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/icon-red-Boulangerie.svg" type="image/x-icon">
 </head>
 <body>
     <header>
