Rajout d'éléments dans petit déjeuner

--- a/dejeuner.html
+++ b/dejeuner.html
@@ -458,7 +458,7 @@
                     <img src="assets/image/dejeuner/Le sandwich graine poulet.webp" alt="Le sandwich grainé poulet avocat">
                     <button data-id="44">Voir la fiche</button>
                 </div>
-                <h4>Le sandwich grainé poulet avocat</h4>
+                <h4>Le sandwich grainé poulet</h4>
                 </div>
             </div>
             
@@ -495,7 +495,7 @@
             <div class="card-content">
                 <div class="card">
                 <div class="card-img">
-                    <img src="assets/image/dejeuner/Le sandwich polka olives jambon cru.webp" alt="Le sandwich polka olives jambon cru">
+                    <img src="assets/image/dejeuner/Le sandwich polka olives jambon cru.webp" alt="Le sandwich polka olives jambon cru">>
                     <button data-id="48">Voir la fiche</button>
                 </div>
                 <h4>Le sandwich polka olives jambon cru</h4>
