--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul>
                     <h3>Petit-déjeuner</h3>
                     <ul>
-                    <li><a href="petit-dejeuner.html#viennoiserie">Viennoiserie</a></li>
+                    <li><a href="petit-dejeuner-viennoiserie.html">Viennoiserie</a></li>
                     <li><a href="petit-dejeuner.html#mini-viennoiseries">Mini viennoiseries</a></li>
                     <li><a href="petit-dejeuner.html#brunch">Brunch</a></li>
                     <li><a href="petit-dejeuner.html#a-partager">A partager</a></li>
